--- a/cleancoderLibCommon/build.gradle
+++ b/cleancoderLibCommon/build.gradle
@@ -1,13 +1,13 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion '20.0.0'
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "contentproviders.learning.cleancoder.com.contentproviders"
+        applicationId "com.cleancoder.base.common"
         minSdkVersion 10
-        targetSdkVersion 20
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.google.guava:guava:15.0'
-    compile project(':cleancoderLibCommon')
 }
