--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.guava:guava:15.0'
-    compile project(':cleancoderLibCommon')
+    compile project(':cleancoderLib')
 }
