--- a/cleancoderLib/build.gradle
+++ b/cleancoderLib/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.cleancoder.base.common"
+        applicationId "com.cleancoder.base"
         minSdkVersion 10
         targetSdkVersion 19
         versionCode 1
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.google.guava:guava:15.0'
+    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
 }
