--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
-    compile 'com.google.guava:guava:15.0'
     compile project(':cleancoderLib')
+    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.google.guava:guava:15.0'
 }
